WP-5597: fix name spacing.

--- a/css/conditionals/event/admission-event-detail.css
+++ b/css/conditionals/event/admission-event-detail.css
@@ -283,6 +283,9 @@
 .node-admission-event.view-mode-full .field-collection-item-field-event-speakers:last-of-type {
   margin-bottom: 0;
 }
+.node-admission-event.view-mode-full .field-name-field-first-name {
+  margin-right: 5px;
+}
 .node-admission-event.view-mode-full .field-name-field-date-time {
   margin-bottom: 12px;
 }
